# fishOfInterest

./: README.md
analysis/: convertPandas.py  convertPandas2.py  key.txt  sizes.py  transitionOrder.py  transitions.py  trialList.txt  truncData.txt
createMasks/: createMasks.py  trialList.txt
createPositions/: CMakeLists.txt  main.cpp  run.py  trialList.txt
linkTracks/: CMakeLists.txt  main.cpp  manualLink.py  trackCount.py
miscellany/: FindNetCDF.cmake
showTracks/: CMakeLists.txt  main.cpp
theMachine/: assign.py  assignIDs.py  cascadeClassify.py  circularHOGExtractor.py  createPMatrix.py  createSampleImages.py  main.py  run.py  train.py  trainClassifier.py
